# TDDSeed

./: .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Readme.md  english.txt  sample_test.cpp
include/: lib.h  lib_crypto.h
src/: lib.cpp  lib2.cpp  lib_crypto.cpp  main.cpp
test/: sample_test.cpp
